--- a/Restaurant/style.css
+++ b/Restaurant/style.css
@@ -11,7 +11,7 @@ body,h2{
 }
 
 .landing{
-   background-image: url(/img/Spice.jpg);
+   background-image: url(/images/Spice.jpg);
    background-size: cover;
    background-position: center;
    height:100vh;
